# mircopython-slide-keyboard-deck

./: .gitignore  CMakeLists.txt  README.md  main.c  main.py  test-button.py
